--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,16 @@
   force = true
 
 [[redirects]]
+  from = "/blog/"
+  to = "/blog/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/about/"
+  to = "/about/index.html"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/404"
   status = 404
