--- a/netlify.toml
+++ b/netlify.toml
@@ -9,18 +9,18 @@
   force = true
 
 [[redirects]]
-  from = "/blog/"
+  from = "/blog"
   to = "/blog/index.html"
   status = 200
 
 [[redirects]]
-  from = "/about/"
+  from = "/about"
   to = "/about/index.html"
   status = 200
 
 [[redirects]]
   from = "/*"
-  to = "/404"
+  to = "/404.html"
   status = 404
 
 [[headers]]
