--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,6 @@
   command = "npm run build"
   publish = "dist"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
 [[redirects]]
   from = "http://*"
   to = "https://:splat"
@@ -13,24 +10,24 @@
 
 [[redirects]]
   from = "/blog.html"
-  to = "/blog"
+  to = "/blog/"
   status = 301
   force = true
 
 [[redirects]]
   from = "/about.html"
-  to = "/about"
+  to = "/about/"
   status = 301
   force = true
 
 [[redirects]]
-  from = "/blog"
-  to = "/blog/index.html"
+  from = "/blog/*"
+  to = "/blog/:splat/"
   status = 200
 
 [[redirects]]
-  from = "/about"
-  to = "/about/index.html"
+  from = "/about/*"
+  to = "/about/:splat/"
   status = 200
 
 [[redirects]]
