--- a/netlify.toml
+++ b/netlify.toml
@@ -9,31 +9,28 @@
   force = true
 
 [[redirects]]
-  from = "/blog.html"
-  to = "/blog/"
+  from = "/blog/"
+  to = "/blog"
   status = 301
   force = true
 
 [[redirects]]
-  from = "/about.html"
-  to = "/about/"
+  from = "/about/"
+  to = "/about"
   status = 301
   force = true
 
 [[redirects]]
-  from = "/blog/*"
-  to = "/blog/:splat/"
-  status = 200
+  from = "/blog/:slug/"
+  to = "/blog/:slug"
+  status = 301
+  force = true
 
 [[redirects]]
-  from = "/about/*"
-  to = "/about/:splat/"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/404.html"
-  status = 404
+  from = "/*/"
+  to = "/:splat"
+  status = 301
+  force = true
 
 [[headers]]
   for = "/*"
