--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,18 @@
   force = true
 
 [[redirects]]
+  from = "/blog"
+  to = "/blog/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/about"
+  to = "/about/index.html"
+  status = 200
+
+[[redirects]]
   from = "/*"
-  to = "/404.html"
+  to = "/404/index.html"
   status = 404
 
 [[headers]]
