--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,16 @@
 [build]
   command = "npm run build"
   publish = "dist"
+
+[[redirects]]
+  from = "/*"
+  to = "/:splat/"
+  status = 301
+  force = true
+  conditions = {Country = ["*"], Language = ["*"]}
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
