--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,9 @@
   command = "npm run build"
   publish = "dist"
 
+[[edge_functions]]
+  function = "routing"
+  path = "/*"
+
 [build.processing]
   skip_processing = true
